maj thesis : experiments + results + intro

--- a/Thesis-latex/appendix/proxy1MSE10y.tex
+++ b/Thesis-latex/appendix/proxy1MSE10y.tex
@@ -8,7 +8,7 @@
   &MSE& 2\verb|^|-10 & 2\verb|^|-9 & 2\verb|^|-8 & 2\verb|^|-7 & 2\verb|^|-6 & 2\verb|^|-5 \\ 
   \hline
   &2\verb|^|1 & 2.077E-09 & 2.027E-09 & 2.007E-09 & 1.974E-09 & 2.030E-09 & 2.324E-09 \\ 
-  &2\verb|^|2 & 2.016E-09 & 2.002E-09 & 1.969E-09 & 2.023E-09 & 2.182E-09 & 2.441E-09 \\ 
+  &2\verb|^|2 & 2.016E-09 & 2.002E-09 & \textbf{1.969E-09} & 2.023E-09 & 2.182E-09 & 2.441E-09 \\ 
   &2\verb|^|3 & 2.015E-09 & 1.992E-09 & 2.031E-09 & 2.051E-09 & 2.334E-09 & 2.449E-09 \\ 
   C&2\verb|^|4 & 2.011E-09 & 2.040E-09 & 2.024E-09 & 2.198E-09 & 2.428E-09 & 2.671E-09 \\ 
   O&2\verb|^|5 & 2.043E-09 & 2.045E-09 & 2.042E-09 & 2.305E-09 & 2.452E-09 & 2.641E-09 \\ 
