--- a/Thesis-latex/appendix/proxy2MASE10y.tex
+++ b/Thesis-latex/appendix/proxy2MASE10y.tex
@@ -14,7 +14,7 @@
   S&2\verb|^|6 & 8.02 & 8.06 & 8.22 & 8.16 & 8.16 & 8.13 & 8.29 & 8.75 & 8.94 & 10.47 & 12.16 \\ 
   T&2\verb|^|7 & 8.00 & 8.09 & 8.17 & 7.97 & 8.09 & 8.05 & 8.56 & 8.79 & 8.67 & 11.03 & 12.66 \\ 
   &2\verb|^|8 & 8.03 & 8.11 & 7.94 & 8.03 & 8.23 & 8.19 & 8.70 & 8.94 & 9.83 & 12.79 & 12.73 \\ 
-  &2\verb|^|9 & 8.07 & 7.98 & 7.89 & 8.08 & 8.21 & 8.20 & 8.97 & 9.04 & 10.87 & 14.29 & 12.95 \\ 
+  &2\verb|^|9 & 8.07 & 7.98 & \textbf{7.89} & 8.08 & 8.21 & 8.20 & 8.97 & 9.04 & 10.87 & 14.29 & 12.95 \\ 
   &2\verb|^|10 & 7.94 & 7.95 & 7.97 & 8.13 & 8.28 & 8.38 & 8.98 & 10.15 & 12.70 & 15.13 & 12.96 \\ 
    \hline
 \end{tabular}
