--- a/Thesis-latex/appendix/proxy1MASE10y.tex
+++ b/Thesis-latex/appendix/proxy1MASE10y.tex
@@ -16,7 +16,7 @@
   T&2\verb|^|7 & 1.78 & 1.79 & 1.73 & 1.75 & 1.74 & 1.96 \\ 
   &2\verb|^|8 & 1.78 & 1.76 & 1.73 & 1.74 & 1.76 & 2.06 \\ 
   &2\verb|^|9 & 1.78 & 1.74 & 1.75 & 1.74 & 1.84 & 2.19 \\ 
-  &2\verb|^|10 & 1.74 & 1.70 & 1.75 & 1.73 & 1.95 & 2.22 \\ 
+  &2\verb|^|10 & 1.74 & \textbf{1.70} & 1.75 & 1.73 & 1.95 & 2.22 \\ 
   &2\verb|^|11 & 1.71 & 1.73 & 1.74 & 1.76 & 2.09 & 2.35 \\ 
    \hline
 \end{tabular}
