--- a/Thesis-latex/appendix/proxy2MASE6M.tex
+++ b/Thesis-latex/appendix/proxy2MASE6M.tex
@@ -13,7 +13,7 @@
   C&2\verb|^|0 & 3.59 & 3.50 & 3.23 & 2.90 & 3.20 & 3.34 & 3.64 & 4.38 & 4.02 & 3.48 & 3.29 & 3.28 \\ 
   O&2\verb|^|1 & 3.65 & 3.58 & 3.17 & 2.81 & 3.01 & 3.46 & 3.69 & 4.76 & 5.51 & 5.44 & 5.02 & 4.59 \\ 
   S&2\verb|^|2 & 3.81 & 3.51 & 2.88 & 2.75 & 3.26 & 3.66 & 3.73 & 4.76 & 5.53 & 5.72 & 5.38 & 4.92 \\ 
-  T&2\verb|^|3 & 3.77 & 3.28 & 2.74 & 3.06 & 3.71 & 3.85 & 3.73 & 4.76 & 5.53 & 5.72 & 5.38 & 4.92 \\ 
+  T&2\verb|^|3 & 3.77 & 3.28 & \textbf{2.74} & 3.06 & 3.71 & 3.85 & 3.73 & 4.76 & 5.53 & 5.72 & 5.38 & 4.92 \\ 
   &2\verb|^|4 & 3.56 & 3.16 & 2.91 & 3.47 & 3.81 & 4.13 & 3.73 & 4.76 & 5.53 & 5.72 & 5.38 & 4.92 \\ 
   &2\verb|^|5 & 3.43 & 3.11 & 3.19 & 3.76 & 4.25 & 4.13 & 3.73 & 4.76 & 5.53 & 5.72 & 5.38 & 4.92 \\ 
   &2\verb|^|6 & 3.48 & 3.05 & 3.59 & 3.99 & 4.66 & 4.13 & 3.73 & 4.76 & 5.53 & 5.72 & 5.38 & 4.92 \\ 
